# crosscryptfs

./: AUTHORS.md  CMakeLists.txt  Doxygen.cmake  README.md
crosscryptfs/: CMakeLists.txt  crosscryptfs.h
crosscryptfs-tests/: CMakeLists.txt  README.md  ecies-tests.cpp  filesystemvolume-tests.cpp  genkeys.sh  importer-tests.cpp
crosscryptfs-tests/data/sourcefolder/: sometext.txt
crosscryptfs/include/: context.h  crosscryptfs.h  ecies.h  encryption.h  exporter.h  file.h  filesystemvolume.h  importer.h  io.h  noencryption.h  printer.h  volume.h
crosscryptfs/src/: context.cpp  crosscryptfs.cpp  ecies.cpp  encryption.cpp  exporter.cpp  file.cpp  filesystemvolume.cpp  importer.cpp  io.cpp  noencryption.cpp  printer.cpp  volume.cpp
crosscryptfscli/: CMakeLists.txt  README.md
crosscryptfscli/src/: main.cpp
docs/: CLASSES.md  CPP.md  DESIGN.md  LAYERS.md  VALUE.md
